--- a/style.css
+++ b/style.css
@@ -155,7 +155,8 @@ th, td {
 }
 
 .review-text {
-font-family: 'Architects Daughter', cursive;}
+ font-family: 'Lora', serif;
+}
 
 .review-link {
  
